# plato-nervous

./: AGENT.md  BENCHMARK.md  CONCRETE-TOKEN-JEPA-THEORY.md  CONSERVATION-PROOF.md  Cargo.toml  DEPENDENCIES.md  DISSERTATION-CH1-MATH.md  DISSERTATION-CH2-VIBE.md  DISSERTATION-CH3-DISTILLATION.md  DISSERTATION-CH4-GRAPH.md  DISSERTATION-CH5-RIFF.md  DISSERTATION-REVIEW-GEMINI.md  DISSERTATION-REVIEW-HERMES.md  DISSERTATION-REVIEW-KIMI.md  DISSERTATION-REVIEW-SEED-MINI.md  DISSERTATION-REVIEW-SEED-PRO.md  DISSERTATION-REVIEW-V4.md  DUAL-DB-JEPA.md  FORWARD-SYNTHESIS.md  GC-UX-RESEARCH.md  GEMMA-COMPLETION-BENCHMARK.md  GRAND-PATTERN.md  GRAND-SYNTHESIS-V3.md  JEPA-FRONTIER-RESEARCH.md  JEPA-ROBOTICS-MAPPING.md  JEPA-TILE-EXPERIMENTS.md  JEPA-TILE-RESULTS-2.md  JEPA-TILE-RESULTS.md  LLM-AS-DISTILLER.md  LORA-TRAINING-PIPELINE.md  MATHEMATICAL-FOUNDATIONS.md  MCP-AS-ROOM.md  META-SYNTHESIS.md  MONO-VIBE-CORRECTION.md  PROOFS.md  README.md  RIFF-ENGINE.md  ROOM-VIBE-ARCHITECTURE.md  SEED-MINI-ROUNDTABLE.md  SESSION-17-SYNTHESIS.md  (+6 more)
docs/: developer-guide-escalation.md
memory/: JOURNAL.md
src/: lib.rs  ollama.rs
