[package]
name = "plato-nervous"
version = "0.1.0"
edition = "2021"
description = "Room-specific model distillation for PLATO nervous system"
license = "Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt", "macros", "time", "net", "io-util"] }
